# isda

./: AUTHORS  CHANGELOG.md  CONTRIBUTING.md  FILES  README.md  REUSE.toml  benchmark.ipynb  dtlz.ipynb  dtlz_lib.py  example.ipynb  isda.py  misda.py  mop_definitions.py  pyproject.toml  run_summary_test.py  run_viz_temp.py  setup.py  validation.ipynb  verify_example.py  verify_mop.py  verify_table.py
docs/: manual.md
