[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "misda"
version = "0.2.0"
description = "MISDA: Maximal Independent Structural Dimensionality Analysis"
readme = "README.md"
authors = [
  { name = "OpenSciLabs", email = "monaco@usp.br" },
]
license = { text = "GPL-3.0-or-later" }
classifiers = [
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.20",
    "pandas>=1.3",
    "scipy>=1.7",
    "networkx>=2.6",
    "matplotlib>=3.5",
    "scikit-learn>=1.0",
]
requires-python = ">=3.8"

[project.urls]
Homepage = "https://github.com/openscilabs/isda"

[tool.setuptools]
py-modules = ["misda"]
